16221
REPL in :paste mode strips out ending parens.

{noformat}
Welcome to Scala version 2.10.0.r25148-b20110624020219 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :paste
// Entering paste mode (ctrl-D to finish)

println(3)
  List(1,2)

// Exiting paste mode, now interpreting.

<console>:1: error: ')' expected but ';' found.
              println(3;
                       ^
<console>:3: error: illegal start of simple expression
       )
       ^
{noformat}


While it worked fine in 2.9.0.1

{noformat}
Welcome to Scala version 2.9.0.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> :paste
// Entering paste mode (ctrl-D to finish)

println(3)
  println(3)

// Exiting paste mode, now interpreting.

3
3
{noformat}

Note: If a semicolon is appended to each expression, then it works just fine also in 2.10

{noformat}
scala> :paste
// Entering paste mode (ctrl-D to finish)

  List(1,2);
  println(3);

// Exiting paste mode, now interpreting.

3
{noformat}

The problem may come from the following code in IMain#requestFromLine

{noformat}
// Oh boy, the parser throws away parens so "(2+2)" is mispositioned.
// So until we can fix the parser we'll have to go trawling.
val adjustment = ((content take lastpos0).reverse takeWhile { ch =>
  ch.isWhitespace || ch == '(' || ch == ')'
}).length
{noformat}

`adjustment` seems to be +1 off.
